--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "nunomaduro/collision": "^5.0",
         "orchestra/testbench": "^6.0",
         "pestphp/pest": "^1.18",
+        "phpstan/phpstan": "^0.12.98",
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
